suggestions for expanded row layout

--- a/x-pack/plugins/data_visualizer/public/application/common/components/stats_table/_index.scss
+++ b/x-pack/plugins/data_visualizer/public/application/common/components/stats_table/_index.scss
@@ -8,6 +8,7 @@ $panelWidthL:     #{'max(40%, 450px)'};
 .dataVisualizerFieldExpandedRow {
   padding-left: $euiSize * 4;
   width: 100%;
+  padding-bottom: $euiSizeM;
 
   .fieldDataCard__valuesTitle {
     text-transform: uppercase;
@@ -52,6 +53,9 @@ $panelWidthL:     #{'max(40%, 450px)'};
   }
 
   .dataVisualizerSummaryTable {
+    table {
+      display: flex;
+    }
     .euiTableRow > .euiTableRowCell {
       border-bottom: 0;
     }
@@ -60,18 +64,8 @@ $panelWidthL:     #{'max(40%, 450px)'};
     }
   }
 
-  .dataVisualizerSummaryTableWrapper {
-    min-width: $panelWidthS;
-    max-width: $panelWidthS;
-  }
-
   .dataVisualizerMapWrapper {
     min-height: 250px;
-    min-width: $panelWidthL;
-  }
-
-  .dataVisualizerTopValuesWrapper {
-    min-width: $panelWidthS;
   }
 
   .dataVisualizerUniformPanel {
@@ -80,11 +74,7 @@ $panelWidthL:     #{'max(40%, 450px)'};
   }
 
   .dataVisualizerPanelWrapper {
-    margin: $euiSizeXS $euiSizeM $euiSizeM 0;
     height: fit-content;
-    &.compressed {
-      width: $panelWidthS;
-    }
   }
 
   .dataVisualizerTextContent {
